webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
      volumeMounts:
      - name: project-volume
        mountPath: /usr/share/nginx/html
    volumes:
    - name: project-volume
    persistentVolumeClaim:
      claimName: project-pvc
